# hushmic

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/dpdfnet-ladspa/: Cargo.toml  build.rs
crates/dpdfnet-ladspa/examples/: bench_rtf.rs  enhance.rs  run-filter-chain.md
crates/dpdfnet-ladspa/src/: attn.rs  engine.rs  lib.rs  model.rs  stft.rs
crates/dpdfnet-ladspa/tests/: descriptor.rs  parity.rs  stft_cola.rs
crates/hushmic/: Cargo.toml
crates/hushmic/src/: autostart.rs  config.rs  controller.rs  lib.rs  lock.rs  main.rs  pipewire.rs  tray.rs  watchdog.rs
crates/hushmic/tests/: conf_gen.rs  config_roundtrip.rs  pw_parse.rs
docs/demo/: ASSETS.md
live/: dpdfnet-mono.conf
packaging/: AppRun  PKGBUILD  build-release.sh  hushmic.autostart.desktop  hushmic.desktop
scripts/: install.sh  setup-assets.sh
